# SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: Constants.h  Food.h  Game.h  Snake.h
include/Core/: IMenu.h  SoundManager.h
include/Entities/: Food.h  Snake.h
include/Scenes/: GameScene.h  MainMenu.h  SettingsMenu.h
include/menu/: BaseMenu.h  IRenderable.h  IUpdatable.h  MainMenu.h  Menu.h  Settings.h  SettingsMenu.h
include/menu/Core/: IMenu.h  IScene.h  SoundManager.h
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
src/Core/: IMenu.cpp  SoundManager.cpp
src/Entities/: Food.cpp  Snake.cpp
src/Scenes/: GameScene.cpp  MainMenu.cpp  SettingsMenu.cpp
src/menu/: BaseMenu.cpp  MainMenu.cpp  Menu.cpp  Settings.cpp  SettingsMenu.cpp
src/menu/Core/: IMenu.cpp  SoundManager.cpp
